# MiniStream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/src/: main.cpp
include/: Demuxer.hpp  Player.hpp
scripts/: build_linux.sh
src/: main.cpp
